@@ -3,5 +3,6 @@ sidux-art-pontos (0.0) unstable; urgency=low
   * Initial Release.
   * update wallpaper for inkscape 0.46-2 
   * add first draft makefile for wallpapers
+  * add first draft toplevel makefile
 
- -- Bernard Gray <bernard.gray@gmail.com>  Thu, 09 Oct 2008 14:06:36 +1100
+ -- Bernard Gray <bernard.gray@gmail.com>  Thu, 09 Oct 2008 14:23:38 +1100
